local_align jupyter notebook

--- a/global_alignment.ipynb
+++ b/global_alignment.ipynb
@@ -501,6 +501,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "score: 77\n",
       "VPLPAGWEMAKTSSGQRYFLNHIDQTTTWQDPRK\n",
       " ::: :::  .   :. :..::  . : :. :  \n",
       "SPLPPGWEERQDILGRTYYVNHESRRTQWKRPTP\n"
