add some details

--- a/local_align.ipynb
+++ b/local_align.ipynb
@@ -5,8 +5,8 @@
    "metadata": {},
    "source": [
     "# Local Alignment\n",
-    "Name: Yanfang Guo\n",
-    "Department : MACS\n",
+    "Name: Yanfang Guo   \n",
+    "Department : MACS   \n",
     "Email: Yanfang.Guo@vub.be"
    ]
   },
@@ -15,12 +15,12 @@
    "metadata": {},
    "source": [
     "## Read the data and initialize it.\n",
-    "The job is actually the same as global alignment, so I will skip the explaination of this part"
+    "The job is  the same as global alignment, so I will skip the explaination of this part"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -33,7 +33,7 @@
     "seq_list = read_fasta(\"protein-sequences.fasta\")\n",
     "seq_list2 = read_fasta(\"WW-sequence.fasta\")\n",
     "\n",
-    "mat1 = Matrix(\"BLOSUM62.txt\")\n"
+    "mat1 = Matrix(\"BLOSUM62.txt\")"
    ]
   },
   {
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -74,12 +74,12 @@
    "source": [
     "## Initialize the score_mat and direc_mat\n",
     "- This part is very similar to that in global alignment\n",
-    "- the values in first row and column of the score_mat are set to 0"
+    "- the values in first row and column of the score_mat are set to 0(different from global alignment)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -162,12 +162,12 @@
    "metadata": {},
    "source": [
     "There are two functions called print_pathpair() and recal() below. They are both used in the traceback function\n",
-    "- print_pathpair() use to print the path in a more formative way\n"
+    "- print_pathpair( ) use to print the path in a more formative way\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -208,15 +208,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    " ## recal()\n",
-    " recal(), this function do the recalculation after we find the path.\n",
+    " ## Recal( )\n",
+    " recal( ), this function do the recalculation after we find the path.\n",
     "    1. first the traceback function will store the coordinates of the path node in a list\n",
     "    2. then for each pair of coordinates , do the recalculation in a recursive way."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -326,7 +326,7 @@
    "metadata": {},
    "source": [
     "## Local Trace\n",
-    "1. the parameter is the maxmum amount of multiple paths\n",
+    "1. the parameter k is the maxmum amount of multiple paths\n",
     "2. how to work\n",
     "   1. find the largest score in the score_mat\n",
     "   2. do traceback\n",
@@ -335,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -354,7 +354,7 @@
     "    i = t.index(max_score)\n",
     "    j = row_large[i][1]\n",
     "\n",
-    "    print(\"the cordinate of the starting cordinate:\",i,j)\n",
+    "    print(\"the coordinate of the starting tracing coordinate:\",i,j)\n",
     "\n",
     "    # i,j is the index of the largest element\n",
     "\n",
@@ -421,13 +421,12 @@
     "\n",
     "    for k in range(len(recal_pair)-1,-1,-1):\n",
     "        t=recal_pair[k]\n",
-    "        recal(recal_pair[k][0],recal_pair[k][1])\n",
-    "        \n"
+    "        recal(recal_pair[k][0],recal_pair[k][1])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -442,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -453,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
