--- a/PSSM.ipynb
+++ b/PSSM.ipynb
@@ -389,12 +389,14 @@
     "    t = [score_mat[i][lseq2-1] for i in range(len(seq1))]\n",
     "    i = argmax(t)\n",
     "\n",
+    "    recal_pair=[]\n",
+    "\n",
+    "\n",
     "    print('score:',score_mat[i][lseq2-1])\n",
-    "    \n",
-    "    print(\"the coordinate of the starting tracing coordinate:\",i)\n",
+    "    print(\"the coordinate of the starting tracing coordinate:\", i)\n",
     "\n",
     "    queue = []\n",
-    "    recal_pair = []\n",
+    "\n",
     "    queue.append([path_up[0:len(path_up)], path_down[0:len(path_down)], i, lseq2-1])\n",
     "    while (len(queue) > 0):\n",
     "\n",
@@ -403,7 +405,7 @@
     "        j = t[3]\n",
     "        path_up = t[0]\n",
     "        path_down = t[1]\n",
-    "        \n",
+    "\n",
     "\n",
     "        if score_mat[i][j]==0:\n",
     "            path_pair.append([path_up,path_down])\n",
@@ -414,7 +416,9 @@
     "                j = j - 1\n",
     "\n",
     "                path_down.insert(0, '*')\n",
-    "                recal_pair.append([i, j])\n",
+    "\n",
+    "                recal_pair.append([i,j])\n",
+    "\n",
     "                if len(queue) < k:\n",
     "                    queue.append([path_up[0:len(path_up)], path_down[0:len(path_down)], i, j])\n",
     "                j = j + 1\n",
@@ -424,7 +428,10 @@
     "                path_down.insert(0, '-')\n",
     "                i = i - 1\n",
     "                path_up.insert(0, seq1[i])\n",
-    "                recal_pair.append([i, j])\n",
+    "\n",
+    "\n",
+    "                recal_pair.append([i,j])\n",
+    "\n",
     "                if len(queue) < k:\n",
     "                    queue.append([path_up[0:len(path_up)], path_down[0:len(path_down)], i, j])\n",
     "                i = i + 1\n",
@@ -436,7 +443,8 @@
     "                j = j - 1\n",
     "                path_up.insert(0, seq1[i])\n",
     "                path_down.insert(0, '*')\n",
-    "                recal_pair.append([i, j])\n",
+    "\n",
+    "                recal_pair.append([i,j])\n",
     "\n",
     "                if len(queue) < k:\n",
     "                    queue.append([path_up[0:len(path_up)], path_down[0:len(path_down)], i, j])\n",
@@ -447,12 +455,134 @@
     "\n",
     "            score_mat[i][j]=0\n",
     "\n",
+    "    #print(path_pair)\n",
+    "\n",
+    "    #print(\"recal_pair:\",recal_pair)\n",
+    "\n",
+    "    for k in range(len(recal_pair) - 1, -1, -1):\n",
+    "        t = recal_pair[k]\n",
+    "        recal(recal_pair[k][0], recal_pair[k][1])\n",
+    "\n",
     "    return path_pair\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 11,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def recal(i,j):\n",
+    "    score_mat[i][j] = 0\n",
+    "    if i< len(seq1)-2 and j <lseq2-2:\n",
+    "        if direc_mat[i+1][j][0]==0 and direc_mat[i][j+1][1]==0 and direc_mat[i+1][j+1][2]==0:\n",
+    "            return\n",
+    "    if i< len(seq1)-2:\n",
+    "        i = i+1\n",
+    "        if direc_mat[i][j][0]==1:\n",
+    "            # do recalculate\n",
+    "            t1 = score_mat[i - 1][j - 1] + mua[seq1[i]][j]\n",
+    "\n",
+    "            t2 = score_mat[i][j - 1] + gap[j - 1]\n",
+    "\n",
+    "            \n",
+    "            t3 = score_mat[i - 1][j] + gap[j]\n",
+    "            max_score = max(t1, t2, t3, 0)\n",
+    "            score_mat[i][j] = max_score\n",
+    "\n",
+    "            if max_score > 0:\n",
+    "                if max_score == t1:\n",
+    "                    direc_mat[i][j][2] = 1\n",
+    "\n",
+    "\n",
+    "                elif max_score == t2:\n",
+    "                    # horizental\n",
+    "                    direc_mat[i][j][1] = 1\n",
+    "\n",
+    "                else:\n",
+    "                    # vertical, seq1 has a gap\n",
+    "                    direc_mat[i][j][0] = 1\n",
+    "            else:\n",
+    "                direc_mat[i][j][0]=0\n",
+    "                direc_mat[i][j][1]=0\n",
+    "                direc_mat[i][j][2]=0\n",
+    "            recal(i,j)\n",
+    "\n",
+    "\n",
+    "        i = i-1\n",
+    "\n",
+    "    if j < lseq2-2:\n",
+    "        j = j+1\n",
+    "        if direc_mat[i][j][1] ==1:\n",
+    "            t1 = score_mat[i - 1][j - 1] + mua[seq1[i]][j]\n",
+    "\n",
+    "            t2 = score_mat[i][j - 1] + gap[j - 1]\n",
+    "\n",
+    "            ## ??? doubt\n",
+    "            t3 = score_mat[i - 1][j] + gap[j]\n",
+    "\n",
+    "            max_score = max(t1, t2, t3, 0)\n",
+    "            score_mat[i][j] = max_score\n",
+    "\n",
+    "            if max_score > 0:\n",
+    "                if max_score == t1:\n",
+    "                    direc_mat[i][j][2] = 1\n",
+    "\n",
+    "\n",
+    "                elif max_score == t2:\n",
+    "                    # horizental\n",
+    "                    direc_mat[i][j][1] = 1\n",
+    "\n",
+    "                else:\n",
+    "                    # vertical, seq1 has a gap\n",
+    "                    direc_mat[i][j][0] = 1\n",
+    "            else:\n",
+    "                direc_mat[i][j][0]=0\n",
+    "                direc_mat[i][j][1]=0\n",
+    "                direc_mat[i][j][2]=0\n",
+    "            recal(i, j)\n",
+    "        j = j-1\n",
+    "\n",
+    "    if i<len(seq1)-2 and j<lseq2-1:\n",
+    "        i = i+1\n",
+    "        j = j+1\n",
+    "        if direc_mat[i][j][2] ==1:\n",
+    "            t1 = score_mat[i - 1][j - 1] + mua[seq1[i]][j]\n",
+    "\n",
+    "            t2 = score_mat[i][j - 1] + gap[j - 1]\n",
+    "\n",
+    "            ## ??? doubt\n",
+    "            t3 = score_mat[i - 1][j] + gap[j]\n",
+    "\n",
+    "            max_score = max(t1, t2, t3, 0)\n",
+    "            score_mat[i][j] = max_score\n",
+    "\n",
+    "            if max_score > 0:\n",
+    "                if max_score == t1:\n",
+    "                    direc_mat[i][j][2] = 1\n",
+    "\n",
+    "                elif max_score == t2:\n",
+    "                    # horizental\n",
+    "                    direc_mat[i][j][1] = 1\n",
+    "                else:\n",
+    "                    # vertical, seq1 has a gap\n",
+    "                    direc_mat[i][j][0] = 1\n",
+    "            else:\n",
+    "                direc_mat[i][j][0]=0\n",
+    "                direc_mat[i][j][1]=0\n",
+    "                direc_mat[i][j][2]=0\n",
+    "            recal(i, j)\n",
+    "\n",
+    "\n",
+    "        i = i -1\n",
+    "        j = j -1\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -464,13 +594,27 @@
       "score: 48.5418325556\n",
       "the coordinate of the starting tracing coordinate: 262\n",
       "PLPDGWEQAMTQ-DGEIYYINHK--------------------------NKTTSWLDPR\n",
-      "*********************-*************************************\n"
+      "*********************-*************************************\n",
+      "score: 47.6561536004\n",
+      "the coordinate of the starting tracing coordinate: 203\n",
+      "PLPAGWEMAKTS-SGQRYFLNHI-------------------------DQTTTWQDPR\n",
+      "**********************************************************\n",
+      "score: 47.4035814071\n",
+      "the coordinate of the starting tracing coordinate: 202\n",
+      "-\n",
+      "*\n"
      ]
     }
    ],
    "source": [
-    "local_pssm()\n",
-    "print_pathpair(traceback(2))\n",
+    "# pack local_pssm which calculate the score, traceback(k) and print_pathpair in one function\n",
+    "# the n indicates the number of motifs we would like to find, k indicates in one path, the maximum number of subpaths\n",
+    "def multi_path_pssm(n,k):\n",
+    "    local_pssm()\n",
+    "    for i in range(n):\n",
+    "        print_pathpair(traceback(k))\n",
+    "        \n",
+    "multi_path_pssm(3,2)\n",
     "\n"
    ]
   },
@@ -483,8 +627,7 @@
     "The result from [Uniprot-P46937](http://www.uniprot.org/uniprot/P46937)\n",
     "![](https://ww2.sinaimg.cn/large/006tNbRwgy1fdoq478hhsj31kw07twgl.jpg)\n",
     "\n",
-    "I only find one motif.\n",
-    "I tried to apply the same recalculation algorithm in Local-alignment, but the time cost is too high. I am now exploring why time cost is too high in PSSM recalculation."
+    "The result given from the website is exactly the same with the result from my algorithms"
    ]
   },
   {
