--- a/local_align.ipynb
+++ b/local_align.ipynb
@@ -253,6 +253,11 @@
     "                else:\n",
     "                    # vertical, seq1 has a gap\n",
     "                    direc_mat[i][j][0] = 1\n",
+    "                    \n",
+    "            else:\n",
+    "                direc_mat[i][j][0]=0\n",
+    "                direc_mat[i][j][1]=0\n",
+    "                direc_mat[i][j][2]=0\n",
     "            recal(i,j)\n",
     "\n",
     "\n",
@@ -284,6 +289,10 @@
     "                else:\n",
     "                    # vertical, seq1 has a gap\n",
     "                    direc_mat[i][j][0] = 1\n",
+    "            else:\n",
+    "                direc_mat[i][j][0]=0\n",
+    "                direc_mat[i][j][1]=0\n",
+    "                direc_mat[i][j][2]=0\n",
     "            recal(i, j)\n",
     "        j = j-1\n",
     "\n",
@@ -314,6 +323,10 @@
     "                else:\n",
     "                    # vertical, seq1 has a gap\n",
     "                    direc_mat[i][j][0] = 1\n",
+    "            else:\n",
+    "                direc_mat[i][j][0]=0\n",
+    "                direc_mat[i][j][1]=0\n",
+    "                direc_mat[i][j][2]=0\n",
     "            recal(i, j)\n",
     "\n",
     "\n",
@@ -461,17 +474,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "the cordinate of the starting cordinate: 204 34\n",
+      "the coordinate of the starting tracing coordinate: 204 34\n",
       "score= 191\n",
       "VPLPAGWEMAKTSSGQRYFLNHIDQTTTWQDPRK\n",
       "::::::::::::::::::::::::::::::::::\n",
       "VPLPAGWEMAKTSSGQRYFLNHIDQTTTWQDPRK\n",
-      "the cordinate of the starting cordinate: 262 33\n",
+      "the coordinate of the starting tracing coordinate: 262 33\n",
       "score= 114\n",
       "PLPDGWEQAMTQDGEIYYINHKNKTTSWLDPR\n",
       "::: ::: : :  :. :..:: ..::.: :::\n",
       "PLPAGWEMAKTSSGQRYFLNHIDQTTTWQDPR\n",
-      "the cordinate of the starting cordinate: 425 28\n",
+      "the coordinate of the starting tracing coordinate: 425 28\n",
       "score= 29\n",
       "FLNSVDEMDT\n",
       "::: .:.  :\n",
@@ -501,7 +514,9 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    ""
+   ]
   }
  ],
  "metadata": {
@@ -513,7 +528,7 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 3.0
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
