--- a/PSSM.ipynb
+++ b/PSSM.ipynb
@@ -54,7 +54,6 @@
    },
    "outputs": [],
    "source": [
-    "\n",
     "blosum = Matrix(\"BLOSUM62.txt\")\n",
     "seq_aligned = read_fasta(\"WW-aligned-136.fasta\")\n",
     "seq2 =seq_aligned[0]\n",
@@ -88,8 +87,7 @@
     "            print('{0:4f}'.format(j), end=\" \")\n",
     "        print()\n",
     "    print()\n",
-    "    print()\n",
-    "    "
+    "    print()"
    ]
   },
   {
@@ -176,8 +174,7 @@
     "\n",
     "# print_fua(mua)\n",
     "\n",
-    "# print(max_value())\n",
-    "\n"
+    "# print(max_value())"
    ]
   },
   {
@@ -302,9 +299,7 @@
     "    for i in alist:\n",
     "        for j in i:\n",
     "            print(j[0:n], end='')\n",
-    "        print()\n",
-    "\n",
-    "\n"
+    "        print()"
    ]
   },
   {
@@ -341,8 +336,7 @@
     "                if max_score == t2:\n",
     "                    direc_mat[i][j][1] = 1\n",
     "                if max_score == t3:\n",
-    "                    direc_mat[i][j][0] = 1\n",
-    "\n"
+    "                    direc_mat[i][j][0] = 1"
    ]
   },
   {
@@ -463,7 +457,7 @@
     "        t = recal_pair[k]\n",
     "        recal(recal_pair[k][0], recal_pair[k][1])\n",
     "\n",
-    "    return path_pair\n"
+    "    return path_pair"
    ]
   },
   {
@@ -577,7 +571,7 @@
     "\n",
     "\n",
     "        i = i -1\n",
-    "        j = j -1\n"
+    "        j = j -1"
    ]
   },
   {
@@ -614,8 +608,7 @@
     "    for i in range(n):\n",
     "        print_pathpair(traceback(k))\n",
     "        \n",
-    "multi_path_pssm(3,2)\n",
-    "\n"
+    "multi_path_pssm(3,2)"
    ]
   },
   {
@@ -637,7 +630,9 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    ""
+   ]
   },
   {
    "cell_type": "code",
@@ -646,7 +641,9 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    ""
+   ]
   }
  ],
  "metadata": {
@@ -658,7 +655,7 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 3.0
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
@@ -669,5 +666,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 0
 }
